🎏💐 Checkpoint ./ramen-toppings.js:30594676/236 ./mini-game.js:30594676/303 ./index.html:30594676/110

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="/script.js"></script>
+    <!--
+    
+    <script src="/mini-game.js"></script>
+-->
   </head>  
   <body>
     <h1>Hi there!</h1>
