--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
     <h1>Hi there, team!</h1>
     
     <p>
-      This is our Glitch file for our new dating sim project, Food Courting(title pending). Make sure to read our readme file and visit our <a href="https://docs.google.com/document/d/1Fdi74VbI1U0CR5-d5qyFjctEkIIbdd4oXwiSJgSniVQ/edit?usp=sharing">project proposal</a>!
+      This is our Glitch file for our new dating sim project, Food Courting(title pending). Make sure to read our readme file and visit our <a href="https://docs.google.com/document/d/1Fdi74VbI1U0CR5-d5qyFjctEkIIbdd4oXwiSJgSniVQ/edit?usp=sharing" target="_blank">project proposal</a>!
     </p>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script>
+    <script src="kitchen.js"></script>
+    <script src="mini-game.js"></script>
+    <script src="ramen-toppings.js"></script>
+    <script src="arcade-counter.js"></script>
+    <script src="spencers-counter.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
