🏢🚈 Checkpoint ./index.html:30594728/48 ./main-character.js:30594728/261

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="ramen-toppings.js"></script>
     <script src="arcade-counter.js"></script>
     <script src="spencers-counter.js"></script>
+    <script src="main-character.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
