☄️🐜 Checkpoint ./index.html:30594728/91 ./canvas.js:30594728/5307

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
+<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script> -->
+<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script> -->
     <title>Hello!</title>
     
     <!-- import the webpage's stylesheet -->
@@ -22,6 +22,8 @@
     <p>
       This is our Glitch file for our new dating sim project, Food Courting(title pending). Make sure to read our readme file and visit our <a href="https://docs.google.com/document/d/1Fdi74VbI1U0CR5-d5qyFjctEkIIbdd4oXwiSJgSniVQ/edit?usp=sharing" target="_blank">project proposal</a>!
     </p>
+    
+    <canvas id="gameCanvas"></canvas>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
@@ -35,6 +37,6 @@
     <script src="arcade-counter.js"></script>
     <script src="spencers-counter.js"></script>
     <script src="main-character.js"></script>
-    <script src="sketch.js"></script>
+    <script src="canvas.js"></script>
   </body>
 </html>
