--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     
     <!-- references for the mini-game javascript files -->
     <script src="https://button.glitch.me/button.js" defer></script>
+    <script src="event-handlers.js"> </script>
     <script src="kitchen.js"></script>
     <script src="mini-game.js"></script>
     <script src="ramen-toppings.js"></script>
