🤖🐄 Checkpoint ./index.html:30594728/45 ./main-character.js:30594728/351 ./physics.js:30594728/74

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- references for the mini-game javascript files -->
     <script src="https://button.glitch.me/button.js" defer></script>
     <script src="event-handlers.js"> </script>
+    <script src="physics.js"></script>
     <script src="kitchen.js"></script>
     <script src="mini-game.js"></script>
     <script src="ramen-toppings.js"></script>
