--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <p>
       This is our Glitch file for our new dating sim project, Food Courting(title pending). Make sure to read our readme file and visit our <a href="https://docs.google.com/document/d/1Fdi74VbI1U0CR5-d5qyFjctEkIIbdd4oXwiSJgSniVQ/edit?usp=sharing" target="_blank">project proposal</a>!
     </p>
+    <p>
+      You can move the big box around with the w,a,s,d keys, and select the smaller box when you are near it. If you're bored, give it try.
+    </p>
     
     <canvas id="gameCanvas"></canvas>
 
