🚏📚 Checkpoint ./index.html:30594728/10

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="ramen-toppings.js"></script>
     <script src="arcade-counter.js"></script>
     <script src="spencers-counter.js"></script>
-    <script src="main-character.js"></script>
+    <script src="player-character.js"></script>
     <script src="canvas.js"></script>
   </body>
 </html>
