--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       This is our Glitch file for our new dating sim project, Food Courting(title pending). Make sure to read our readme file and visit our <a href="https://docs.google.com/document/d/1Fdi74VbI1U0CR5-d5qyFjctEkIIbdd4oXwiSJgSniVQ/edit?usp=sharing" target="_blank">project proposal</a>!
     </p>
     <p>
-      You can move the big box around with the w,a,s,d keys, and select the smaller box when you are near it. If you're bored, give it try.
+      You can move the big box around with the w,a,s,d keys, and select the smaller box with the Spacebar when you are near it. If you're bored, give it try.
     </p>
     
     <canvas id="gameCanvas"></canvas>
@@ -34,14 +34,14 @@
     
     <!-- references for the mini-game javascript files -->
     <script src="https://button.glitch.me/button.js" defer></script>
-    <script src="event-handlers.js"> </script>
-    <script src="physics.js"></script>
-    <script src="kitchen.js"></script>
-    <script src="mini-game.js"></script>
-    <script src="ramen-toppings.js"></script>
-    <script src="arcade-counter.js"></script>
-    <script src="spencers-counter.js"></script>
-    <script src="player-character.js"></script>
+    <script src="miniGame/event-handlers.js"> </script>
+    <script src="miniGame/physics.js"></script>
+    <script src="miniGame/mini-game.js"></script>
+    <script src="miniGame/ramen-toppings.js"></script>
+    <script src="rooms/kitchen.js"></script>
+    <script src="rooms/arcade-counter.js"></script>
+    <script src="rooms/spencers-counter.js"></script>
+    <script src="characters/player-character.js"></script>
     <script src="canvas.js"></script>
   </body>
 </html>
