--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <script src="https://button.glitch.me/button.js" defer></script>
     <script src="miniGame/event-handlers.js"> </script>
     <script src="miniGame/physics.js"></script>
-    <script src="miniGame/mini-game.js"></script>
+    <script src="miniGame/ramen-bowl.js"></script>
     <script src="miniGame/ramen-toppings.js"></script>
+    <script src="miniGame/mini-game.js"></script>
     <script src="rooms/kitchen.js"></script>
     <script src="rooms/arcade-counter.js"></script>
     <script src="rooms/spencers-counter.js"></script>
