😻✌️ Checkpoint ./characters/player-character.js:30594728/26 ./canvas.js:30594728/249 ./miniGame/event-handlers.js:30594728/58 ./index.html:30594728/23

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     
     <!-- references for the mini-game javascript files -->
-    <script src="https://button.glitch.me/button.js" defer></script>
+<!--     <script src="https://button.glitch.me/button.js" defer></script>
     <script src="miniGame/event-handlers.js"> </script>
     <script src="miniGame/physics.js"></script>
     <script src="miniGame/ramen-bowl.js"></script>
@@ -42,7 +42,7 @@
     <script src="rooms/kitchen.js"></script>
     <script src="rooms/arcade-counter.js"></script>
     <script src="rooms/spencers-counter.js"></script>
-    <script src="characters/player-character.js"></script>
-    <script src="canvas.js"></script>
+    <script src="characters/player-character.js"></script> -->
+    <script src="canvas.js" type="module"></script>
   </body>
 </html>
