🚲🚂 Checkpoint ./index.html:30594728/296 ./miniGame/event-handlers.js:30594728/21

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <script src="rooms/arcade-counter.js"></script>
     <script src="rooms/spencers-counter.js"></script>
     <script src="characters/player-character.js"></script> -->
-    <script src="event-handlers.js" type="module"></script>
+<!--     <script src="miniGame/event-handlers.js" type="module"></script>
+    <script src="miniGame/mini-game.js" type="module"></script> -->
+    <script src="miniGame/event-handler.js" type="module"></script>
     <script src="canvas.js" type="module"></script>
   </body>
 </html>
