🚒💸 Checkpoint ./index.html:30594728/91 ./miniGame/ingredients.js:30594728/10531 ./miniGame/mini-game.js:30594728/116 ./canvas.js:30594728/51

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    <div id="game-images">
+      <img id="mush" src="/images/mush.png">
+    </div>
     
     <!-- references for the mini-game javascript files -->
 <!--     <script src="https://button.glitch.me/button.js" defer></script>
