🎀🐧 Checkpoint ./miniGame/ingredients.js:30594728/71 ./index.html:30594728/415

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <div id="game-images">
       <img id="mush" src="/images/mush.png">
+      <img id="egg" src="/images/unfertalized_chick.png">
+      <img id="sea420" src="/images/sea420.png">
+      <img id="spawn" src="/images/spawn.png">
+      <img id="swirly" src="/images/swirly.png">
     </div>
     
     <!-- references for the mini-game javascript files -->
