🌟🍁 Checkpoint ./index.html:30594728/148 ./miniGame/helper-functions.js:30594728/305 ./characters/player-character.js:30594728/223

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <img id="sea420" src="/images/sea420.png">
       <img id="spawn" src="/images/spawn.png">
       <img id="swirly" src="/images/swirly.png">
+      <img id="character" src="/images/minigameMainCharacter.png">
+      <img id="kitchenBG" src="/images/kitchen.png">
     </div>
     
     <!-- references for the mini-game javascript files -->
