🌦🕰 Checkpoint ./miniGame/mini-game.js:30594728/26 ./characters/player-character.js:30594728/6148 ./index.html:30594728/60

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <img id="character" src="/images/minigameMainCharacter.png">
       <img id="kitchenBG" src="/images/kitchen.png">
     </div>
-    
+    <img id="character" src="/images/minigameMainCharacter.png">
     <!-- references for the mini-game javascript files -->
 <!--     <script src="https://button.glitch.me/button.js" defer></script>
     
