🍞😘 Checkpoint ./.glitch-assets:30594728/773 ./index.html:30594728/75 ./canvas.js:30594728/116

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <div id="game-images">
+      <img id="splashScreen" src="/images/splashScreen.jpg">
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
