🎾🚀 Checkpoint ./EndScreen.js:30594728/958 ./index.html:30594728/68

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <img id="swirly" src="/images/swirly.png">
       <img id="character" src="/images/minigameMainCharacter.png">
       <img id="kitchenBG" src="/images/kitchen.png">
+      <img id="endScreen" src="/images/splashScreen.png">
     </div>
     <!-- references for the mini-game javascript files -->
 <!--     <script src="https://button.glitch.me/button.js" defer></script>
