🚓🏡 Checkpoint ./index.html:30594728/127 ./miniGame/ramen-bowl.js:30594728/684 ./miniGame/mini-game.js:30594728/218 ./EndScreen.js:30594728/193 ./miniGame/ingredients.js:30594728/98

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <img id="sea420" src="/images/sea420.png">
       <img id="spawn" src="/images/spawn.png">
       <img id="swirly" src="/images/swirly.png">
+      <img id="bowl" src="/images/bowl.png">
       <img id="character" src="/images/minigameMainCharacter.png">
       <img id="kitchenBG" src="/images/kitchen.png">
       <img id="endScreen" src="/images/splashScreen.png">
