⚡️⛵️ Checkpoint ./visualNovel/VisualNovel.js:30594728/255 ./index.html:30594728/57 ./canvas.js:30594728/102 ./event-handlers.js:30594728/7

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <div id="game-images">
       <img id="splashScreen" src="/images/splashScreen.png">
+      <img id="mallMap" src="/images/mallMap.png">
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
