🎿🎱 Checkpoint ./visualNovel/rooms/arcade-counter.js:30594728/585 ./index.html:30594728/215

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <div id="game-images">
       <img id="splashScreen" src="/images/splashScreen.png">
       <img id="mallMap" src="/images/mallMap.png">
+      <img id="arcadeCounterBG" src="/images/arcadeCounterBackground.png">
+      <img id="arcadeCounterReg" src="/images/arcadeCounterRegister.png">
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
