🏃📕 Checkpoint ./visualNovel/rooms/store-counter.js:30594559/68 ./visualNovel/VisualNovel.js:30594676/39:30594728/502 ./visualNovel/rooms/arcade-counter.js:30594728/73 ./index.html:30594559/18:30594728/197

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <img id="mallMap" src="/images/mallMap.png">
       <img id="arcadeCounterBG" src="/images/arcadeCounterBackground.png">
       <img id="arcadeCounterReg" src="/images/arcadeCounterRegister.png">
+      <img id="storeBG" src="/images/arcadeCounterBackground.png">
+      <img id="storeReg" src="/images/arcadeCounterRegister.png">
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
