🚓🚟 Checkpoint ./index.html:30594676/852:30594728/33 ./visualNovel/VisualNovel.js:30594559/178:30594728/17 ./visualNovel/rooms/store-counter.js:30594728/10 ./visualNovel/rooms/arcade-counter.js:30594728/99 ./event-handlers.js:30594728/30

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     <div id="game-images">
       <img id="splashScreen" src="/images/splashScreen.png">
       <img id="mallMap" src="/images/mallMap.png">
+<!-- Counter/Backgrounds Assets -->
       <img id="arcadeCounterBG" src="/images/arcadeCounterBackground.png">
       <img id="arcadeCounterReg" src="/images/arcadeCounterRegister.png">
-      <img id="storeBG" src="/images/arcadeCounterBackground.png">
-      <img id="storeReg" src="/images/arcadeCounterRegister.png">
+      <img id="storeBG" src="/images/storeBG.png">
+      <img id="storeReg" src="/images/storeCounter.png">
+<!-- Minigame Assets -->
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
@@ -49,8 +51,16 @@
       <img id="swirly" src="/images/swirly.png">
       <img id="bowl" src="/images/bowl.png">
       <img id="character" src="/images/minigameMainCharacter.png">
+      <img id="miniTed" src="/images/miniTed.png">
       <img id="kitchenBG" src="/images/kitchen.png">
       <img id="endScreen" src="/images/splashScreen.png">
+<!-- Character Assets -->
+      <img id="ravenT" src="/images/RavenT.png">
+      <img id="ravenL" src="/images/RavenL.png">
+      <img id="chadT" src="/images/chadT.png">
+      <img id="chadL" src="/images/chadL.png">
+      <img id="taylor" src="/images/Taylor.png">
+      <img id="ted" src="/images/Ted.png">
     </div>
     <!-- references for the mini-game javascript files -->
 <!--     <script src="https://button.glitch.me/button.js" defer></script>
