🚍🐥 Checkpoint ./index.html:30594728/53

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <img id="sea420" src="/images/sea420.png">
       <img id="spawn" src="/images/spawn.png">
       <img id="swirly" src="/images/swirly.png">
+      <img id="noods" src="/images/sendnoods.png">
       <img id="bowl" src="/images/bowl.png">
       <img id="character" src="/images/minigameMainCharacter.png">
       <img id="miniTed" src="/images/miniTed.png">
