--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <img id="arcadeCounterReg" src="/images/arcadeCounterRegister.png">
       <img id="storeBG" src="/images/storeBG.png">
       <img id="storeReg" src="/images/storeCounter.png">
+      <img id="spicytakesBG" src="/images/spicytakesBG.png">
+      <img id="spicytakesCounter" src="/images/spicytakesCounter.png">
 <!-- Minigame Assets -->
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
