🎃🍨 Checkpoint ./index.html:30594676/215

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
       <img id="ravenL" src="/images/RavenL.png">
       <img id="chadT" src="/images/chadT.png">
       <img id="chadL" src="/images/chadL.png">
-      <img id="taylor" src="/images/Taylor.png">
-      <img id="ted" src="/images/Ted.png">
+      <img id="chadC" src="/images/chadC.png">
+      <img id="taylorL" src="/images/TaylorL.png">
+      <img id="taylorT" src="/images/TaylorT.png">
+      <img id="tedL" src="/images/TedL.png">
+      <img id="tedT" src="/images/TedT.png">
     </div>
     <!-- references for the mini-game javascript files -->
 <!--     <script src="https://button.glitch.me/button.js" defer></script>
