💈🌕 Checkpoint ./index.html:30594676/63

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="game-images">
       <img id="splashScreen" src="/images/splashScreen.png">
       <img id="mallMap" src="/images/mallMap.png">
+      <img id="title" src="/images/title.png">
 <!-- Counter/Backgrounds Assets -->
       <img id="arcadeCounterBG" src="/images/arcadeCounterBackground.png">
       <img id="arcadeCounterReg" src="/images/arcadeCounterRegister.png">
