🏋💶 Checkpoint ./index.html:30594676/159

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <!-- Character Assets -->
       <img id="ravenT" src="/images/RavenT.png">
       <img id="ravenL" src="/images/RavenL.png">
+      <img id="ravenC" src="/images/RavenC.png">
       <img id="chadT" src="/images/chadT.png">
       <img id="chadL" src="/images/chadL.png">
       <img id="chadC" src="/images/chadC.png">
