🌇👌 Checkpoint ./characters/Raven.js:30594728/53 ./index.html:30594728/164

--- a/index.html
+++ b/index.html
@@ -47,26 +47,32 @@
       <img id="spicytakesBG" src="/images/spicytakesBG.png">
       <img id="spicytakesCounter" src="/images/spicytakesCounter.png">
 <!-- Minigame Assets -->
+      <!-- Ingredients -->
       <img id="mush" src="/images/mush.png">
       <img id="egg" src="/images/unfertalized_chick.png">
       <img id="sea420" src="/images/sea420.png">
       <img id="spawn" src="/images/spawn.png">
       <img id="swirly" src="/images/swirly.png">
       <img id="noods" src="/images/sendnoods.png">
+      
       <img id="bowl" src="/images/bowl.png">
       <img id="character" src="/images/minigameMainCharacter.png">
       <img id="miniTed" src="/images/miniTed.png">
       <img id="kitchenBG" src="/images/kitchen.png">
       <img id="endScreen" src="/images/splashScreen.png">
 <!-- Character Assets -->
+      <!-- Raven -->
       <img id="ravenT" src="/images/RavenT.png">
       <img id="ravenL" src="/images/RavenL.png">
       <img id="ravenC" src="/images/RavenC.png">
+      <!-- Chad -->
       <img id="chadT" src="/images/chadT.png">
       <img id="chadL" src="/images/chadL.png">
       <img id="chadC" src="/images/chadC.png">
+      <!-- Taylor -->
       <img id="taylorL" src="/images/TaylorL.png">
       <img id="taylorT" src="/images/TaylorT.png">
+      <!-- Ted -->
       <img id="tedL" src="/images/TedL.png">
       <img id="tedT" src="/images/TedT.png">
     </div>
