🙏🐆 Checkpoint ./index.html:30594728/41 ./characters/ted.js:30594728/5356 ./miniGame/mini-game.js:30594728/26

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Make some Ramen!</h1>
 
     <p>
-      Welcome to Food Courting. Move around the map by clicking on the store you would like to enter, chat with the character
+      Welcome to Food Courting. Move around the map by clicking on the store you would like to enter, chat with the character, then go to your shift at the food court
     </p>
 
     <canvas id="gameCanvas"> Loading...</canvas>
