🐥🗼 Checkpoint ./index.html:30594728/95 ./visualNovel/rooms/ramen-counter.js:30594728/36

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <!-- Spicy Take -->
           <img id="spicytakesBG" src="/images/spicytakesBG.png" />
           <img id="spicytakesCounter" src="/images/spicytakesCounter.png" />
+        <!-- Ramen -->
+          <img id="ramenBG" src="/images/ramenCounter.png" />
       <!-- Minigame Assets -->
         <!-- Ingredients -->
           <img id="mush" src="/images/mush.png" />
