⛈🎡 Checkpoint ./visualNovel/rooms/ramen-counter.js:30594728/155 ./visualNovel/VisualNovel.js:30594728/289 ./characters/Taylor.js:30594676/564 ./index.html:30594728/86

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <!-- Ted -->
           <img id="tedL" src="/images/TedL.png" />
           <img id="tedT" src="/images/TedT.png" />
+          <img id="tedEnding" src="/images/ted-ending.gif" />
     </div>
     <script src="canvas.js" type="module"></script>
   </body>
