--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <!-- Ted -->
           <img id="tedL" src="/images/TedL.png" />
           <img id="tedT" src="/images/TedT.png" />
-          <img id="tedEnding" src="/images/ted-ending.gif" />
+          <img id="tedEnding1" src="/images/teds-ending1.png" />
+          <img id="tedEnding2" src="/images/teds-ending2.png" />
     </div>
     <script src="canvas.js" type="module"></script>
   </body>
