📯🐔 Checkpoint ./visualNovel/VisualNovel.js:30594728/537 ./index.html:30594728/6 ./characters/Taylor.js:30594676/34 ./visualNovel/rooms/ramen-counter.js:30594728/110 ./visualNovel/rooms/arcade-counter.js:30594728/4241 ./visualNovel/rooms/spicyTake-counter.js:30594728/525 ./visualNovel/rooms/store-counter.js:30594728/534

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <!-- Ted -->
           <img id="tedL" src="/images/TedL.png" />
           <img id="tedT" src="/images/TedT.png" />
-          <img id="tedEnding1" src="/images/teds-ending1.png" />
-          <img id="tedEnding2" src="/images/teds-ending2.png" />
+          <img id="tedEnding1" src="/images/teds_ending1.png" />
+          <img id="tedEnding2" src="/images/teds_ending2.png" />
     </div>
     <script src="canvas.js" type="module"></script>
   </body>
