🛥👱 Checkpoint ./index.html:30594728/804 ./visualNovel/VisualNovel.js:30594728/327

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           <img id="tedT" src="/images/TedT.png" />
           <img id="tedEnding1" src="/images/teds_ending1.png" />
           <img id="tedEnding2" src="/images/teds_ending2.png" />
+        <!-- Debug -->
+          <img id="debug" src="/images/splashScreen.png"/>
     </div>
     <script src="canvas.js" type="module"></script>
   </body>
