💃🌞 Checkpoint ./characters/ted.js:30594676/4969 ./index.html:30594676/323

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
           <img id="ravenT" src="/images/RavenT.png" />
           <img id="ravenL" src="/images/RavenL.png" />
           <img id="ravenC" src="/images/RavenC.png" />
+          <img id="ravenEnding" src="/images/ravens_ending.png" />
         <!-- Chad -->
           <img id="chadT" src="/images/chadT.png" />
           <img id="chadL" src="/images/chadL.png" />
           <img id="chadC" src="/images/chadC.png" />
+          <img id="chadEnding" src="/images/chads_ending.png" />
         <!-- Taylor -->
           <img id="taylorL" src="/images/TaylorL.png" />
           <img id="taylorT" src="/images/TaylorT.png" />
+          <img id="taylorEnding" src="/images/taylors_ending.png" />
         <!-- Ted -->
           <img id="tedL" src="/images/TedL.png" />
           <img id="tedT" src="/images/TedT.png" />
