🐄🚄 Checkpoint ./style.css:30594676/31 ./index.html:30594676/1181

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
 
-    <h1>Make some Ramen!</h1>
-
-    <p>
-      Welcome to Food Courting. Move around the map by clicking on the store you would like to enter, chat with the character, then go to your shift at the food court
-    </p>
+    <h1>Welcome to Food Courting!</h1>
 
     <canvas id="gameCanvas"> Loading...</canvas>
     <div id="game-images">
@@ -72,6 +68,8 @@
         <!-- Debug -->
           <img id="debug" src="/images/splashScreen.png"/>
     </div>
-    <script src="canvas.js" type="module"></script>
+    <script src="canvas.js" type="module"></script>    <p>
+      Welcome to Food Courting, Player. This beta dating sim is centered around a mall food court employee, you! Clock in to navigate the map and meet your 4 dating candidates around the mall -- but don't forget to go to your shifts at the Ramen Shop (where you'll play a minigame)!
+    </p>
   </body>
 </html>
