🌃🌁 Checkpoint ./index.html:30594676/67 ./style.css:30594676/447 ./SplashScreen.js:30594676/16

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <h1>Welcome to Food Courting!</h1>
+    <h1><b>Welcome to <i>Food Courting</i>!</b></h1>
 
     <canvas id="gameCanvas"> Loading...</canvas>
     <div id="game-images">
@@ -68,8 +68,10 @@
         <!-- Debug -->
           <img id="debug" src="/images/splashScreen.png"/>
     </div>
-    <script src="canvas.js" type="module"></script>    <p>
-      Welcome to Food Courting, Player. This beta dating sim is centered around a mall food court employee, you! Clock in to navigate the map and meet your 4 dating candidates around the mall -- but don't forget to go to your shifts at the Ramen Shop (where you'll play a minigame)!
+    <script src="canvas.js" type="module"></script>
+    
+    <p>
+     <b> Welcome to Food Courting, Player. This beta dating sim is centered around a mall food court employee, you! Clock in to navigate the map and meet your 4 dating candidates around the mall -- but don't forget to go to your shifts at the Ramen Shop (where you'll play a minigame)!</b>
     </p>
   </body>
 </html>
