--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <h1><b>Welcome to <i>Food Courting</i>!</b></h1>
+    <h1><b>Welcome to <i>Food Courting</i>(beta)!</b></h1>
 
     <canvas id="gameCanvas"> Loading...</canvas>
     <div id="game-images">
