🐮🕶 Checkpoint ./visualNovel/rooms/arcade-counter.js:30594728/515 ./visualNovel/rooms/ramen-counter.js:30594728/1042 ./index.html:30594676/15 ./miniGame/mini-game.js:30594728/153 ./visualNovel/VisualNovel.js:30594676/19

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Title Screen -->
         <img id="splashScreen" src="/images/title.png" />
       <!-- VisualNovel backGround -->
-        <img id="mallMap" src="/images/mallMap.png" />
+        <img id="mallMap" src="/images/map2.1.png" />
       <!-- Counter/Backgrounds Assets -->
         <!-- Arcade -->
           <img id="arcadeCounterBG" src="/images/arcadeCounterBackground.png" />
