🎅🐚 Checkpoint ./index.html:30594676/67 ./SplashScreen.js:30594676/34

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="game-images">
       <!-- Title Screen -->
         <img id="splashScreen" src="/images/title.png" />
+        <img id="title" src="/images/title.1.png" />
       <!-- VisualNovel backGround -->
         <img id="mallMap" src="/images/map2.1.png" />
       <!-- Counter/Backgrounds Assets -->
