👨😂 Checkpoint ./visualNovel/VisualNovel.js:30594728/509 ./index.html:30594728/136 ./visualNovel/rooms/ramen-counter.js:30594728/20 ./SplashScreen.js:30594728/238

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div id="game-images">
       <!-- Title Screen -->
         <img id="splashScreen" src="/images/title.png" />
-        <img id="title" src="/images/title.1.png" />
       <!-- VisualNovel backGround -->
         <img id="mallMap" src="/images/map2.1.png" />
       <!-- Counter/Backgrounds Assets -->
@@ -30,6 +29,7 @@
           <img id="spicytakesCounter" src="/images/spicytakesCounter.png" />
         <!-- Ramen -->
           <img id="ramenBG" src="/images/ramenCounter.png" />
+          <img id="ramenReg" src="/images/ramenReg.png" />
       <!-- Minigame Assets -->
         <!-- Ingredients -->
           <img id="mush" src="/images/mush.png" />
