Fixed the ending bug, and the shop/taylor bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1><b>Welcome to <i>Food Courting</i>(beta)!</b></h1>
 
-    <canvas id="gameCanvas" style="border:5px solid #000000;"> Loading...</canvas>
+    <canvas id="gameCanvas" style="border:5px solid #000000;" oncontextmenu="return false"> Loading...</canvas>
     <div id="game-images">
       <!-- Title Screen -->
         <img id="splashScreen" src="/images/title.png" />
